--- a/proj.win32/cpp-empty-test.vcxproj
+++ b/proj.win32/cpp-empty-test.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="GameUI.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="rotatorMan.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
@@ -137,6 +138,8 @@
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="GameUI.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="myglobal.h" />
+    <ClInclude Include="rotatorMan.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\cocos\2d\libcocos2d.vcxproj">
