--- a/proj.win32/cpp-empty-test.vcxproj.filters
+++ b/proj.win32/cpp-empty-test.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="GameUI.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="rotatorMan.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h">
@@ -38,6 +41,12 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="GameUI.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="myglobal.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="rotatorMan.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
